Adding roles and attempting to create integration tests