@@ -1,5 +1,7 @@
 package pl.fixpoint.fixpointbackend.security.auth;
 
+import pl.fixpoint.fixpointbackend.security.user.Role;
+import pl.fixpoint.fixpointbackend.security.user.RoleRepository;
 import pl.fixpoint.fixpointbackend.security.user.User;
 import pl.fixpoint.fixpointbackend.security.user.UserRepository;
 import pl.fixpoint.fixpointbackend.security.jwt.JwtService;
@@ -10,23 +12,30 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
 public class AuthenticationService {
 
+    private static final String DEFAULT_ROLE_NAME = "CUSTOMERS";
+
+    private final RoleRepository roleRepository;
     private final UserRepository repository;
     private final PasswordEncoder passwordEncoder;
     private final JwtService jwtService;
     private final AuthenticationManager authenticationManager;
 
     public AuthenticationResponse register(RegisterRequest request) {
+
+        Role defaultRole = roleRepository.findByName(DEFAULT_ROLE_NAME)
+                .orElseThrow(() -> new IllegalStateException("Default role '" + DEFAULT_ROLE_NAME + "' not found in Database."));
         var user = User.builder()
                 .firstName(request.getFirstName())
                 .lastName(request.getLastName())
                 .email(request.getEmail())
                 .password(passwordEncoder.encode(request.getPassword()))
-                .roles(Collections.emptyList())
+                .roles(List.of(defaultRole))
                 .build();
         repository.save(user);
 
